My first website

--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -10,7 +10,7 @@ output:
 ### LLN and CLT
 
 - **Law of Large Number**: 
-$$ \text{For any small }\epsilon>0, Pr(|\frac{L_1+L_2+...+L_N}{N}-\mu<\epsilon|)\rightarrow1 \text{ as } N\rightarrow \infty $$
+$$ \text{For any small }\epsilon>0, Pr(\mid\frac{L_1+L_2+...+L_N}{N}-\mu<\epsilon\mid)\rightarrow1 \text{ as } N\rightarrow \infty $$
     - where $L_i$ can be loss of person $i$ and all $L_i$ has mean $\mu$. 
     - This means when sample size is big enough, sample mean will approach the true mean.
     - LLN is useful when thinking about the more people are insured, the actual average loss is close to the true loss.
@@ -24,29 +24,19 @@ $$ \text{Regardless of how } L_i \text{ distributes, } \frac{L_1+L_2+...+L_N}{N}
 
 ### BLUE
 
-#### Small (finite) sample property -- apply to all sample sizes (small and large)
-
-##### Bias
-
-An estimator is unbiased if, on average, it hits the true parameter value. That is, the mean of the sampling distribution of the estimator is equal to the true parameter value.
-
-Throw darts to an x-y plane, guessing the how "accurate" to throw it at center $\Rightarrow$ expected value is (0,0) because postive and negative cancel eath other
-
+- Small (finite) sample property -- apply to all sample sizes (small and large)
+    - **Bias**
+        - An estimator is unbiased if, on average, it hits the true parameter value. That is, the mean of the sampling distribution of the estimator is equal to the true parameter value.
+        - Throw darts to an x-y plane, guessing the how "accurate" to throw it at center $\Rightarrow$ expected value is (0,0) because postive and negative cancel eath other
 $$E(W)=\theta \Leftrightarrow W\text{ is an unbiased estimator of }\theta$$
+    - **Efficiency**
+        - Given two unbiased estimators of $\theta$, an estimator $W_1$ is efficient relative to $W_2$ if $Var(W1)\leq Var(W2) \quad \forall \theta$
+- Large sample (asymptotic) property
+    - **Consistency**
+        - An estimator is consistent if, as the sample size increases, the estimates (produced by the estimator) "converge" to the true value of the parameter being estimated. To be slightly more precise - consistency means that, as the sample size increases, the sampling distribution of the estimator becomes increasingly concentrated at the true parameter value.
+        - As sample size $n\rightarrow \infty$, $P(\mid W_n-\theta\mid>\epsilon)\rightarrow 0$ 
 
-##### Efficiency
-
-Given two unbiased estimators of $\theta$, an estimator $W_1$ is efficient relative to $W_2$ if $Var(W1)\leq Var(W2) \quad \forall \theta$
-
-#### Large sample (asymptotic) property
-
-##### Consistency
-
-An estimator is consistent if, as the sample size increases, the estimates (produced by the estimator) "converge" to the true value of the parameter being estimated. To be slightly more precise - consistency means that, as the sample size increases, the sampling distribution of the estimator becomes increasingly concentrated at the true parameter value.
-
-As sample size $n\rightarrow \infty$, $P(\mid W_n-\theta\mid>\epsilon)\rightarrow 0$ 
-
-##### Unbiasedness and consistency are not equivalent: Unbiasedness is a statement about the expected value of the sampling distribution of the estimator. Consistency is a statement about "where the sampling distribution of the estimator is going" as the sample size increases.
+> Unbiasedness and consistency are not equivalent: Unbiasedness is a statement about the expected value of the sampling distribution of the estimator. Consistency is a statement about "where the sampling distribution of the estimator is going" as the sample size increases.
 
 **************
 
