--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -13,7 +13,7 @@ output: html_document
   
     (Fall 2015, Spring 2016, Fall 2016, Spring 2017)
     
-- Risk Management and Insurance RMIN 4000 Instructor
+- Risk Management and Insurance RMIN 4000 Instructor of Record
 
-    (Spring 2019)
+    (Spring 2019 -- [Syllabus](https://drive.google.com/file/d/1J2mYaTuITbFIBi3Zjeq5KfuJ5GHRBVCp/view?usp=sharing))
 
