My first website

--- a/research.Rmd
+++ b/research.Rmd
@@ -10,15 +10,18 @@ output: html_document
 
 ### Working Papers
 
+- McCarthy, David and Polin Wang, "How diversifiable are Eurozone state pension liabilities?  An application of a multi-country Bayesian cohort-based approach with a Vector Error-Correction Model prior."
+
+- Carson, James, David Eckles, Joshua Frederick, and Polin Wang, "Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?"
+
+
 - McCarthy, David, Florian Bonnet, Hippolyte d'Albis, and Polin Wang, "The effect of longevity risk on the sustainability \& inter-generational equity of public and private transfer systems"
 
 - McCarthy, David and Polin Wang, "The effect of longevity risk on the sustainability \& inter-generational equity of public and private transfer systems"
 
 - McCarthy, David and Polin Wang, "Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia"
 
-- Carson, James, David Eckles, and Polin Wang, "On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity", _To be under review in January 2019_
-
-- McCarthy, David and Polin Wang, "Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality"
+- Carson, James, David Eckles, and Polin Wang, "On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity",
 
 
 
