--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -22,7 +22,7 @@ $$ \text{Regardless of how } L_i \text{ distributes, } \frac{L_1+L_2+...+L_N}{N}
 
 **************
 
-### BLUE
+### Estimation properties
 
 - Small (finite) sample property -- apply to all sample sizes (small and large)
     - **Bias**
