--- a/index.Rmd
+++ b/index.Rmd
@@ -33,22 +33,28 @@ Download my [CV](https://drive.google.com/file/d/1UEHBgPeGOMO2MT3hlF-U8TjOobwGsd
 
 Mortality modeling, asset liability management, generational wealth accounts, and market discipine
 
+
+#### Society of Actuary (SOA) Exams Completed:
+
+- P (Probability)
+- FM (Financial Mathematics)
+- MFE (Models for Financial Economics)
+- MLC (Models for Life Contingencies)
+- C (Construction and Evaluation of Actuarial Models)
+
+#### Awards and Honors
+
+- 2019 S.S. Huebner Doctoral Colloquium
+- 2018 Harris Schlesinger Memorial Doctoral Research Award
+- 2018 University of Georgia RMIN Summer Research Scholarship
+- 2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)
+
 #### Programming Languages
 
 - VBA (professional with insurance pricing and reserving experience)
 - Prophet (professional with insurance pricing and reserving experience)
 - Matlab (asset liability optimization projects)
 - R (recently developed interests in)
-
-#### Society of Actuary (SOA) Exams Completed:
-
-P, FM, MFE, MLC, and C
-
-#### Awards and Honors
-
-- 2018 Harris Schlesinger Memorial Doctoral Research Award
-- 2018 University of Georgia RMIN Summer Research Scholarship
-- 2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)
 
 ************
 
