--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ title: "Po-Lin Wang"
 
 #### Curriculum vitae
 
-Download my [CV](https://drive.google.com/file/d/1UEHBgPeGOMO2MT3hlF-U8TjOobwGsdYn/view?usp=sharing)
+Download my [CV](https://drive.google.com/open?id=1LQuxxk-6ayb-D3PxP-OuvYA8V4uv42Ld)
 
 #### Research Interests
 
