My first website

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ Mortality modeling, asset liability management, generational wealth accounts, an
 
 #### Awards and Honors
 
-- 2019 S.S. Huebner Doctoral Colloquium
+- 2019 S.S. Huebner Doctoral Colloquium Scholar
 - 2018 Harris Schlesinger Memorial Doctoral Research Award
 - 2018 University of Georgia RMIN Summer Research Scholarship
 - 2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)
