--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -16,4 +16,10 @@ output: html_document
 - Risk Management and Insurance RMIN 4000 Instructor of Record
 
     (Spring 2019 -- [Syllabus](https://drive.google.com/file/d/1J2mYaTuITbFIBi3Zjeq5KfuJ5GHRBVCp/view?usp=sharing), Spring 2020 -- Syllabus)
+    
 
+### University of South Florida
+
+- Life and Health Insurance Products RMI 4115
+
+    (Fall 2020)
